data/derived/fa15/progs/unify/prog2924.ml.out
Characters 113-125:
  let seen' = if not(List.mem h) then h::seen else seen in
                    ^^^^^^^^^^^^
Error: This expression has type 'a list -> bool
       but an expression was expected of type bool
